/*
 * The build for the CDK tools and the container image that carries them.
 *
 * The image itself is built from the Dockerfile in the repository root, not
 * from here. It used to be generated by the bmuschko 'docker-java-application'
 * plugin from a single 'baseImage' line, which meant the image contents were a
 * side effect of a plugin version and could not be built or inspected without
 * Gradle. 'installDist' now lays out the classpath and the Dockerfile copies
 * it, so 'docker build' is all CI needs.
 */

plugins {
    // Apply the groovy plugin to also add support for Groovy (needed for Spock)
    id 'groovy'

    id 'java'
    // we enable the application plugin so that we can run things using "./gradlew run ..."
    // and so that 'installDist' produces the /app/libs layout the image uses
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

java {
    // Declare the target explicitly. Without this block the compile target
    // silently followed whichever JDK happened to be running Gradle, so the
    // bytecode level depended on the developer's machine rather than on
    // anything recorded here. 21 matches the JRE in the Dockerfile.
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {


    // These dependencies are used by the application.
    implementation 'commons-cli:commons-cli:1.11.0'

    def cdkVersion = '2.11'

    implementation "org.openscience.cdk:cdk-core:$cdkVersion"
    implementation "org.openscience.cdk:cdk-data:$cdkVersion"
    implementation "org.openscience.cdk:cdk-silent:$cdkVersion"
    implementation "org.openscience.cdk:cdk-io:$cdkVersion"
    implementation "org.openscience.cdk:cdk-ioformats:$cdkVersion"
    implementation "org.openscience.cdk:cdk-smiles:$cdkVersion"
    implementation "org.openscience.cdk:cdk-inchi:$cdkVersion"
    implementation "org.openscience.cdk:cdk-pdb:$cdkVersion"
    implementation "org.openscience.cdk:cdk-qsarmolecular:$cdkVersion"
    implementation "org.openscience.cdk:cdk-extra:$cdkVersion"
    implementation "org.openscience.cdk:cdk-renderbasic:$cdkVersion"
    implementation "org.openscience.cdk:cdk-renderawt:$cdkVersion"
    implementation "org.openscience.cdk:cdk-sdg:$cdkVersion"
    implementation "org.openscience.cdk:cdk-depict:$cdkVersion"
    implementation "org.openscience.cdk:cdk-signature:$cdkVersion"

    // Groovy 4 for Spock testing. Note the group id: Groovy 4 moved from
    // 'org.codehaus.groovy' to 'org.apache.groovy', and Spock's variant has to
    // match ('-groovy-4.0').
    testImplementation 'org.apache.groovy:groovy:4.0.32'

    // Use the awesome Spock testing and specification framework even with Java
    testImplementation 'org.spockframework:spock-core:2.3-groovy-4.0'

    // Gradle 9 no longer puts the JUnit Platform launcher on the test runtime
    // classpath implicitly; without it every test task fails before running a
    // single spec with 'Failed to load JUnit Platform'. No version: spock-core
    // imports the JUnit BOM, which pins it in step with the engine Spock uses.
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // CDK
    testImplementation "org.openscience.cdk:cdk-datadebug:$cdkVersion"
}

application {
    // Define the main class for the application.
    // this can be set as a commandline option e.g.
    // ./gradlew run --args="--help" -PmainClass=org.foo.Bar
    mainClass = project.hasProperty("mainClass") ? project.getProperty("mainClass") : 'squonk.jobs.cdk.DescriptorsExec'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
